Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  labels:
    app: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
        - name: service-a
          image: gangakrishh/service-a:v2
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
        - name: service-b
          image: gangakrishh/service-b:v1
          ports:
          - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    app: service-a
spec:
  selector:
    app: service-a
  ports:
    - protocol: TCP
      name: service-a
      port: 80
      targetPort: 8080
    - protocol: TCP
      name: service-b
      port: 90
      targetPort: 9090
