ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
        - path: /foo
          backend:
            serviceName: service-a
            servicePort: 90
        - path: /bar
          backend:
            serviceName: service-a
            servicePort: 80
